k8s/app-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-factory-app
