k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-factory-app
  namespace: data-factory-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: data-factory
  template:
    metadata:
      labels:
        app: data-factory
    spec:
      containers:
      - name: app
        image: giacomo12305/data-factory-app:latest
        ports:
        - containerPort: 5000
        # --- AGGIUNTA SONDE DI AFFIDABILITÀ ---
        startupProbe:
          httpGet:
            path: /
            port: 5000
          failureThreshold: 12
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        # --- FINE AGGIUNTA ---
---
apiVersion: v1
kind: Service
metadata:
  name: data-factory-service
  namespace: data-factory-app
spec:
  selector:
    app: data-factory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
