k8s/postgres-db.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-factory-db
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: data-factory-db
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432
  selector:
    statefulset.kubernetes.io/pod-name: postgres-0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: data-factory-db
spec:
  serviceName: "postgres"
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: postgres
        image: postgres:15.8-bullseye
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "1.2Gi"
            cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
